2011-01-31  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.91+.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.91.
	(OCTAVE_API_VERSION_NUMBER): Now 45.
	(OCTAVE_RELEASE_DATE): Now 2011-01-31.

2010-02-04  Rik  <octave@nomad.inbox5.com>

	* configure.ac: Add new doc/icons/Makefile to list of Makefiles to build
	* examples/Makefile.am: Move building of .desktop files and distribution
	of icons to doc/icons directory.

2010-01-30  Rik  <octave@nomad.inbox5.com>

	* NEWS: Deprecate glpkmex function.
	
2011-01-30  John W. Eaton  <jwe@octave.org>

	* acinclude.m4 (OCTAVE_PROG_GHOSTSCRIPT): Update warning message.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* configure.ac: Remove code to print warning for missing ARPACK.
	* README.MacOS: Remove arpack from list of prerequisite software.

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* NEWS: Deprecate saveimage function.

2011-01-28  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Spelling corrections.
	* README.MacOS: Additional modifications for building Octave manually.
	* README.MacOS: Modify instructions for building Octave manually.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* configure.ac: Don't check for ARPACK.
	* common.mk (ARPACK_CPPFLAGS, ARPACK_LDFLAGS, ARPACK_LIBS):
	Delete variables.
	(do_subst_config_vals): Don't substitute them.

2011-01-27  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Modify instructions for MacPorts to "deactivate"
	rather than "uninstall" octave.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* mk-opts.pl, mkoctfile.cc.in, mkoctfile.in: Untabify.

	* mkf77def.in, mk-opts.pl, mkoctfile.cc.in, structdemo.cc,
	unwinddemo.cc, fortdemo.cc, paramdemo.cc,
	celldemo.cc,stringdemo.cc, hello.cc, embedded.cc, helloworld.cc:
	Strip trailing whitespace.

2011-01-26  Ben Abbott  <bpabbott@mac.com>

	* README.MacOS: Modify organization, and update for MacPorts.

2011-01-26  John W. Eaton  <jwe@octave.org>
