@@ -15,60 +15,67 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with Octave; see the file COPYING.  If not, see
 .\" <http://www.gnu.org/licenses/>.
-.\"
-.TH Octave 1 "Jan 8 1996"
+.\" --------------------------------------------------------------------
+.de Vb \" (V)erbatim (b)egin.  Use fixed width font and no justification
+.ft CW
+.nf
+..
+.de Ve \" (V)erbatim (e)nd.  Return to regular font and justification
+.ft R
+.fi
+..
+.\" --------------------------------------------------------------------
+.TH OCTAVE 1 "4 February 2011" "GNU Octave"
 .SH NAME
 octave \- A high-level interactive language for numerical computations.
 .SH SYNOPSIS
-.nf
-octave [options]
-.fi
-.SH OPTIONS
-The complete set of command-line options for octave is available by
-running the command
-.nf
-
-    octave \-\-help
-
-.fi
+\fBoctave\fP [\fIoptions\fP]... [\fIfile\fP]
 .SH DESCRIPTION
 Octave is a high-level language, primarily intended for numerical
 computations.  It provides a convenient command line interface for
 solving linear and nonlinear problems numerically.
+.SH OPTIONS
+The complete set of command-line options for \fBoctave\fP is available by
+running the following command from the shell.
+.Vb
+
+    octave \-\-help
+.Ve
 .SH DOCUMENTATION
 The primary documentation for Octave is written using Texinfo, the GNU
 documentation system, which allows the same source files to be used to
 produce on-line and printed versions of the manual.
 .PP
 You can read the on-line copy of the Octave documentation by issuing
-the command
-.nf
+the following command from within \fBoctave\fP.
+.Vb
 
-    octave:13> help \-i
+    octave:1> doc
 
-.fi
-while running Octave interactively, by using the GNU Emacs info mode,
-or by running standalone programs like info or xinfo.
+.Ve
+The Info files may also be read with a stand-alone program such as
+\fBinfo\fP or \fBxinfo\fP.  HTML, Postscript, or PDF versions of the
+documentation are installed on many systems as well.
 .SH BUGS
-The best way to submit a bug report for Octave is to use the command
-.nf
-
-     octave:13> bug_report
-
-.fi
-while running Octave interactively.  This will create a template bug
-report file and start an editor on that file.  Your 
-message will be sent to the bug-octave mailing list
-once you are finished editing the template.
-.PP
-If you are unable to use the bug_report command, send your message
-to the
-.B bug@octave.org
-mailing list by some other means.  Please read the `Bugs' chapter in
-the Octave manual to find out how to submit a bug report that will
-enable the Octave maintainers to fix the problem.
+The Octave project maintains a bug tracker at http://bugs.octave.org.
+Before submitting a new item please read the instructions at
+http://www.octave.org/bugs.html on how to submit a useful report.
+.SH FILES
+Upon startup Octave looks for four initialization files.  Each file
+may contain any number of valid Octave commands.
+.TP
+\fIoctave-home\fP/share/octave/site/m/startup/octaverc
+Site-wide initialization file which changes options for all users.
+\fIoctave-home\fP is the directory where Octave was installed such as
+\fB/usr/local\fP.
+.TP
+\fIoctave-home\fP/share/octave/\fIversion\fP/m/startup/octaverc
+Site-wide initialization file for Octave version \fIversion\fP.
+.TP
+~/.octaverc
+User's personal initialization file.
+.TP
+\&\.octaverc
+Project-specific initialization file located in the current directory.
 .SH AUTHOR
-.nf
-John W. Eaton
-<jwe@octave.org>
-.fi
+John W. Eaton <jwe@octave.org>
