@@ -1,3 +1,8 @@
+2010-02-05  Rik  <octave@nomad.inbox5.com>
+
+	* interpreter/mkoctfile.1, interpreter/octave-config.1,
+	interpreter/octave.1: Overhaul man pages for release 3.4.
+
 2010-02-04  Rik  <octave@nomad.inbox5.com>
 
 	* icons/octave-logo.ico: Add logo format left out of last changeset.
